--- a/gofood-frontend/package.json
+++ b/gofood-frontend/package.json
@@ -22,7 +22,10 @@
     "react-toastify": "^9.1.2",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
-    "web-vitals": "^2.1.4"
+    "sass": "^1.53.0",
+    "sass-loader": "^13.0.2",
+    "web-vitals": "^2.1.4",
+    "jwt-decode": "^3.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
