--- a/djangoproject/requirements.txt
+++ b/djangoproject/requirements.txt
@@ -7,8 +7,10 @@ charset-normalizer==3.0.1
 clipboard==0.0.4
 coreapi==2.3.3
 coreschema==0.0.4
+cryptography==40.0.1
 Django==4.1.7
 django-ckeditor==6.5.1
+django-cors-headers==3.14.0
 django-js-asset==2.0.0
 djangorestframework==3.14.0
 docutils==0.19
