--- a/gofood-frontend/package.json
+++ b/gofood-frontend/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.4",
     "moment": "^2.29.4",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
