--- a/djangoproject/requirements.txt
+++ b/djangoproject/requirements.txt
@@ -8,10 +8,12 @@ clipboard==0.0.4
 coreapi==2.3.3
 coreschema==0.0.4
 cryptography==40.0.1
+Deprecated==1.2.13
 Django==4.1.7
 django-ckeditor==6.5.1
 django-cors-headers==3.14.0
 django-js-asset==2.0.0
+django-oauth-toolkit==2.2.0
 djangorestframework==3.14.0
 docutils==0.19
 drf-yasg==1.21.5
@@ -22,9 +24,11 @@ idna==3.4
 inflection==0.5.1
 itypes==1.2.0
 Jinja2==3.1.2
+jwcrypto==1.4.2
 MarkupSafe==2.1.2
 natsort==8.2.0
 numpy==1.23.4
+oauthlib==3.2.2
 openpyxl==3.0.10
 outcome==1.2.0
 packaging==23.0
@@ -56,5 +60,6 @@ trio-websocket==0.9.2
 tzdata==2022.7
 uritemplate==4.1.1
 urllib3==1.26.14
+wrapt==1.15.0
 wsproto==1.2.0
 xlrd==2.0.1
